discord login using OAuth2 Client - Set up custom OAuth2 client provider on application.properties and set OAuth2 authentication/authorization on SecurityConfig.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# How to define a custom OAuth2 provider (discord)
+# https://medium.com/fourscouts/spring-boot-oauth2-with-discord-as-provider-fbe81ba2a721
 
+spring.security.oauth2.client.provider.discord.authorization-uri=https://discord.com/api/oauth2/authorize
+spring.security.oauth2.client.provider.discord.token-uri=https://discord.com/api/oauth2/token
+spring.security.oauth2.client.provider.discord.user-info-uri=https://discordapp.com/api/users/@me
+spring.security.oauth2.client.provider.discord.user-name-attribute=username
+spring.security.oauth2.client.provider.discord.user-info-authentication-method=post
+
+spring.security.oauth2.client.registration.discord.client-id=${DISCORD_CLIENT_ID}
+spring.security.oauth2.client.registration.discord.client-secret=${DISCORD_CLIENT_SECRET}
+spring.security.oauth2.client.registration.discord.client-authentication-method=post
+spring.security.oauth2.client.registration.discord.scope=identify
+spring.security.oauth2.client.registration.discord.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.discord.client-name=Login With Discord
+spring.security.oauth2.client.registration.discord.redirect-uri=http://localhost:8080/login/oauth2/code/discord
